--- a/amplify.yml
+++ b/amplify.yml
@@ -3,14 +3,14 @@ frontend:
   phases:
     # IMPORTANT - Please verify your build commands
     preBuild:
-      commands: 
+      commands:
        - npm install
     build:
-      commands: 
-       - npm run build
+      commands:
+       - ng build
   artifacts:
     # IMPORTANT - Please verify your build output directory
-    baseDirectory: build
+    baseDirectory: bist/theislamicnation
     files:
       - '**/*'
   cache:
