--- a/amplify.yml
+++ b/amplify.yml
@@ -7,7 +7,7 @@ frontend:
        - npm install
     build:
       commands:
-       - ng build
+       - npm run build
   artifacts:
     # IMPORTANT - Please verify your build output directory
     baseDirectory: bist/theislamicnation
