--- a/package.json
+++ b/package.json
@@ -20,9 +20,21 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "buffer": "^6.0.3",
+    "concat-stream": "^2.0.0",
+    "core-js": "^3.24.0",
+    "crypto-js": "^4.1.1",
+    "echarts": "^5.3.3",
+    "echarts-for-angular": "^0.4.0",
+    "events": "^3.3.0",
+    "lodash": "^4.17.21",
+    "ngx-soap": "^0.7.0",
     "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
+    "sax": "^1.2.4",
+    "stream": "^0.0.2",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
