--- a/.hintrc
+++ b/.hintrc
@@ -4,12 +4,14 @@
   ],
   "hints": {
     "no-inline-styles": "off",
-    "button-type": "off",
-    "axe/forms": [
+    "compat-api/html": [
       "default",
       {
-        "select-name": "off"
+        "ignore": [
+          "meta[name=theme-color]"
+        ]
       }
-    ]
+    ],
+    "apple-touch-icons": "off"
   }
 }
