--- a/package.json
+++ b/package.json
@@ -11,47 +11,37 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
-    "@angular/cdk": "^14.1.0",
+    "@angular/cdk": "^14.2.3",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
-    "@angular/material": "^14.1.0",
+    "@angular/material": "^14.2.3",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "buffer": "^6.0.3",
-    "concat-stream": "^2.0.0",
-    "core-js": "^3.24.0",
-    "crypto-js": "^4.1.1",
-    "echarts": "^5.3.3",
-    "echarts-for-angular": "^0.4.0",
-    "events": "^3.3.0",
-    "lodash": "^4.17.21",
+    "@angular/service-worker": "^14.0.0",
     "ngx-cookie-service": "^14.0.1",
-    "ngx-soap": "^0.7.0",
-    "ngx-toastr": "^15.0.0",
+    "ngx-toastr": "^15.1.0",
     "rxjs": "~7.5.0",
-    "sax": "^1.2.4",
-    "stream": "^0.0.2",
     "tslib": "^2.3.0",
-    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.2",
     "@angular/cli": "~14.0.2",
     "@angular/compiler-cli": "^14.0.0",
+    "@angular/localize": "^14.2.4",
     "@types/jasmine": "~4.0.0",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.12",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.6",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8",
     "typescript": "~4.7.2"
   }
 }
