--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@angular/service-worker": "^14.0.0",
+    "echarts-for-angular": "^0.4.0",
     "ngx-cookie-service": "^14.0.1",
     "ngx-toastr": "^15.1.0",
     "rxjs": "~7.5.0",
