--- a/.hintrc
+++ b/.hintrc
@@ -18,6 +18,8 @@
       {
         "button-name": "off"
       }
-    ]
+    ],
+    "typescript-config/strict": "off",
+    "axe/language": "off"
   }
 }
