--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@ngx-translate/core": "^14.0.0",
     "echarts-for-angular": "^0.4.0",
     "ngx-cookie-service": "^14.0.1",
     "ngx-toastr": "^15.1.0",
