--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -10,14 +10,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      # - name: Set up SSH and Initialize and Update Submodule
-      #   run: |
-      #     mkdir -p ~/.ssh/
-      #     echo '${{ secrets.SSH_PRIVATE_KEY }}' > ~/.ssh/id_rsa
-      #     chmod 600 ~/.ssh/id_rsa
-      #     ssh-keyscan github.com >> ~/.ssh/known_hosts
-      #     git submodule init
-      #     git submodule update
+      - name: Set up SSH and Initialize and Update Submodule
+        run: |
+          mkdir -p ~/.ssh/
+          echo '${{ secrets.SSH_PRIVATE_KEY }}' > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          git submodule init
+          git submodule update
 
       - name: Install Packages
         run: npm install --force
